Added pandas help

--- a/_posts/2020-07-21-post-r-tips 2.md
+++ b/_posts/2020-07-21-post-r-tips 2.md
@@ -239,9 +239,22 @@ knitr::opts_chunk$set(echo = TRUE, options(scipen=999, digits=1))
 
 ```r
 knitr::knit_exit()
-```
-## then more code or markdown after it won't be incorporated.
 
+#then more code or markdown after it won't be incorporated.
+
+```
+
+**How to read a csv file from an online repository (e.g., GitHub) and glimpse it**
+
+```
+
+#Find the url of the raw csv file
+
+library(tidyverse)
+df <- readr::read_csv("https://blah_blahEtc.com/blah")
+df %>% glimpse()
+
+```
 
 
 #R
